--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Website</title>
 </head>
 <body class="font-inter">
@@ -15,6 +16,7 @@
             <div>
                 <img src="assets/logo-navbar.png" width="139px" height="60px" alt="logo">
             </div>
+
             <div>
                 <ul class="menu">
                     <li><a href="">Features</a></li>
@@ -22,11 +24,37 @@
                     <li><a href="">Why It's Different</a></li>
                 </ul>
             </div>
+
             <div>
                 <button class="btn">Get Early Access</button>
             </div>
         </nav>
     </header>
+
+        <section id="hero-banner">
+            <div class="banner-element">
+                <div class="banner-button">
+                    <span class="btn-icn"><img src="./assets/button.png" alt=""></span>
+                    <button class="btn2">Early Access Now Open</button>
+                </div>
+                <div class="banner-title">
+                    <h1>Structured Thinking,<br><span class="green">Not Just Note-Taking.</span></h1>
+                </div>
+                <div>
+                    <p>A private space to store notes, links, and learning summaries — designed to <br>
+                    help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                </div>
+                <div class="banner-button2">
+                    <div>
+                        <button class="btn3">Start Building Your Vault<img class="btn3-icn" src="./assets/ArrowRight.png"></button>
+                    </div>
+
+                    <button class="btn4"><i class="fa-solid fa-caret-right"></i>See How It Works</button>
+                </div>
+
+            </div>
+        </section>
+   
     
 </body>
 </html>
