complete note section, second brain section and fix layout alignment

--- a/index.html
+++ b/index.html
@@ -51,10 +51,89 @@
 
                     <button class="btn4"><i class="fa-solid fa-caret-right"></i>See How It Works</button>
                 </div>
-
             </div>
         </section>
    
-    
+        <section id="second-heading">
+            <div>
+                <h1>Notes Don'T Fail, Structure Does.</h1>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+        </section>
+
+        <section>
+            <div class="card-content">
+
+                <div class="card-elements">
+                    <img src="./assets/Vector.png" alt="">
+                    <h4>Scattered Notes</h4>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+
+                <div class="card-elements">
+                    <img src="./assets/Bookmarks.png" alt="">
+                    <h4>Bookmark overload</h4>
+                    <p>Hundreds of saved links you'll never revisit or remember.</p>
+                </div>
+
+                <div class="card-elements">
+                    <img src="./assets/Brain.png" alt="">
+                    <h4>No idea connections</h4>
+                    <p>Insights stay isolated, never building into bigger understanding.</p>
+                </div>
+
+                <div class="card-elements">
+                    <img src="./assets/Info.png" alt="">
+                    <h4>Forgetting what
+                        you learned</h4>
+                    <p>Knowledge fades because there's no system to retain it.</p>
+                </div>
+            </div>
+        </section>
+        
+        <section class="brain-banner">
+            <div class="brain-banner-content">
+                <img src="assets/image 7.png" alt="">
+
+                <div class="textbox">
+
+                    <div class="heading-part">
+                        <p class="p1">The Solution</p>
+                        <h2>Your second brain,<br>
+                            structured by design
+                        </h2>
+                        <div class="paragraph">
+                            <p class="p2">Personal Knowledge Vault isn't another note-taking app. zIt's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+                        </div>
+                    </div>
+
+                    <div class="point">
+
+                        <div class="key_points">
+                            <img src="assets/CheckCircle.png">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+
+                        <div class="key_points">
+                            <img src="assets/CheckCircle.png">
+                            <p>Connect related concepts automatically as you write</p>
+                        </div>
+
+                        <div class="key_points">
+                            <img src="assets/CheckCircle.png">
+                            <p>Build lasting knowledge through reflection prompts</p>
+                        </div>
+
+                        <div class="key_points">
+                            <img src="assets/CheckCircle.png">
+                            <p>Find anything instantly with semantic search</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
 </body>
 </html>
