add early access section

--- a/index.html
+++ b/index.html
@@ -135,5 +135,23 @@
 
             </div>
         </section>
+
+        <section class="early-access-section">
+            <div class="early-access-box">
+
+                <div class="title">
+                    <h2>Ready To Think More Clearly?</h2>
+                    <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
+                </div>
+
+                <div class="get_early_access">
+                    <button class="btn5">Get Early Access<img class="btn5-icn" src="./assets/ArrowRight.png"></button>
+                    <p>Free during early access • No credit card needed</p>
+
+                </div>
+
+            </div>
+
+        </section>
 </body>
 </html>
