full website done

--- a/index.html
+++ b/index.html
@@ -153,5 +153,28 @@
             </div>
 
         </section>
+
+        <footer>
+            <div class="footer-section">
+                <div class="logo-part">
+
+                    <img src="assets/logo-footer.png" alt="">
+                    <div class="social-logo">
+                        <p>Social Links</p>
+                        <ul class="links">
+                            <li><a href="https://x.com/"><img src="assets/x.png" alt=""></a></li>
+                            <li><a href="https://www.linkedin.com/"><img src="assets/linkdln.png" alt=""></a></li>
+                            <li><a href="https://www.facebook.com/"><img src="assets/facebook.png" alt=""></a></li>
+                        </ul>
+                        
+                        
+                    </div>
+                </div>
+                <hr>
+                <div class="copyright">
+                    <p>&copy 2026 Personal Knowledge Vault. All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
